final/site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctfd-site-service
  namespace: site
spec:
  type: ClusterIP
  ports:
  - name: 'http'
    port: 80
    targetPort: 80
  selector:
    ctfd.site.pod: ctfd-site-pod
---
apiVersion: v1
kind: Service
metadata:
  name: ctfd-site
  namespace: site
spec:
  type: ExternalName
  externalName: ctfd-site-deployment.default.svc.cluster.local
